Fixed Toolbox Text Alignment

--- a/wp-content/themes/bb-theme-child/css/main.css
+++ b/wp-content/themes/bb-theme-child/css/main.css
@@ -334,8 +334,8 @@ Copyright (c) 2015 Daniel Eden
     -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
     transform: skewX(-0.78125deg) skewY(-0.78125deg); }
   77.7% {
-    -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg); }
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% {
     -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
     transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
@@ -360,8 +360,8 @@ Copyright (c) 2015 Daniel Eden
     -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
     transform: skewX(-0.78125deg) skewY(-0.78125deg); }
   77.7% {
-    -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg); }
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% {
     -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
     transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
@@ -4005,7 +4005,23 @@ header #sr-header-con .fl-row-content-wrap {
   .home-tool-section-con .fl-col-content.fl-node-content {
     min-height: 220px; }
   .swedish-language .home-tool-section-con .fl-col-content.fl-node-content {
-    min-height: 220px; } }
+    min-height: 220px; }
+  .home-tool-section-con .title {
+    height: 90px; }
+  .home-tool-section-con .icon {
+    display: table;
+    height: 90px; }
+  .home-tool-section-con .icon > div.fl-node-content {
+    display: table-cell;
+    height: 90px;
+    vertical-align: middle; }
+  .learn-more {
+    display: table;
+    height: 60px; }
+  .learn-more > div.fl-node-content {
+    display: table-cell;
+    height: 60px;
+    vertical-align: middle; } }
 
 @media screen and (max-width: 500px) {
   .blue-stripe:before {
